pipelines/event-listeners/ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triggers-ingress
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # No tls section required for this Ingress it is only used for 
  # internal cluster traffic over HTTP therefore it does not need 
  # TLS configuration to a certificate.
  rules:
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-github-main-builder-listener
            port:
              number: 8080
        path: /main
        pathType: Prefix
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-github-webui-workflow-completed-listener
            port:
              number: 8080
        path: /webui-workflow
        pathType: Prefix
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-github-galasa-monorepo-workflow-completed-listener
            port:
              number: 8080
        path: /galasa-monorepo-workflow
        pathType: Prefix
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-github-release-build-completed-listener
            port:
              number: 8080
        path: /release-build
        pathType: Prefix
